sdks/novus-mundus-ts/tests/results/09-hero-lock-debug4.txt
bun test v1.2.10 (db2e7d7f)

tests/e2e/09-hero.test.ts:

[1m[34m━━━ Hero System ━━━[0m
[validator] Verifying program binaries...
[validator] All binaries found.
[validator] Killing any existing validator...
[validator] Cleared old ledger.
[validator] Starting solana-test-validator --reset ...
[validator] Programs: Novus Mundus, MPL Core, TLD House, ALT Name Service
[validator] Waiting for RPC... (0.8s)
[validator] Ready in 1.2s.
[setup] Airdropping SOL...
[setup] Initializing GameEngine + ShopConfig...
[setup] Initializing cities, heroes, research, shop items (parallel)...
[setup] All infrastructure ready in 2.4s.
(skip) Hero System > Hero Minting > should mint a new hero
(skip) Hero System > Hero Minting > should reject minting without enough resources
(skip) Hero System > Hero Minting > should reject minting non-existent template
(skip) Hero System > Hero Minting > should mint multiple heroes from same template
(skip) Hero System > Hero Level Up > should level up hero with fragments
(skip) Hero System > Hero Level Up > should reject level up without enough fragments
(skip) Hero System > Hero Level Up > should reject level up at max level
(skip) Hero System > Hero Level Up > should increase stats on level up
[PlayerFactory] Initializing player 0 (city 0)
[2m[onchain][0m [2m3bvJ9h7wmV..[0m [36m⚡ UserCreated[0m [2muser=2GzaZXQS.. wallet=G9Qrv1ad.. timestamp=1770018577[0m
[2m[onchain][0m [2m3bvJ9h7wmV..[0m [36m⚡ PlayerJoinedKingdom[0m [2mkingdomId=0 gameEngine=A1y9ZYn7.. player=8368TZj8.. owner=G9Qrv1ad.. joinedAt=1770018577[0m
[2m[onchain][0m [2m3bvJ9h7wmV..[0m [35minit user[0m
[2m[onchain][0m [2m3bvJ9h7wmV..[0m [35mCreateIdempotent[0m
[2m[onchain][0m [2m3bvJ9h7wmV..[0m [35mInstruction: GetAccountDataSize[0m
[2m[onchain][0m [2m3bvJ9h7wmV..[0m [90mProgram return: TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA pQAAAAAAAAA=[0m
[2m[onchain][0m [2m3bvJ9h7wmV..[0m [35mInitialize the associated token account[0m
[2m[onchain][0m [2m3bvJ9h7wmV..[0m [35mInstruction: InitializeImmutableOwner[0m
[2m[onchain][0m [2m3bvJ9h7wmV..[0m [35mPlease upgrade to SPL Token 2022 for immutable owner support[0m
[2m[onchain][0m [2m3bvJ9h7wmV..[0m [35mInstruction: InitializeAccount3[0m
[2m[onchain][0m [2m3bvJ9h7wmV..[0m [35minit player[0m
[2m[onchain][0m [2m3bvJ9h7wmV..[0m [35mCreateIdempotent[0m
[2m[onchain][0m [2m3bvJ9h7wmV..[0m [35mInstruction: GetAccountDataSize[0m
[2m[onchain][0m [2m3bvJ9h7wmV..[0m [90mProgram return: TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA pQAAAAAAAAA=[0m
[2m[onchain][0m [2m3bvJ9h7wmV..[0m [35mInitialize the associated token account[0m
[2m[onchain][0m [2m3bvJ9h7wmV..[0m [35mInstruction: InitializeImmutableOwner[0m
[2m[onchain][0m [2m3bvJ9h7wmV..[0m [35mPlease upgrade to SPL Token 2022 for immutable owner support[0m
[2m[onchain][0m [2m3bvJ9h7wmV..[0m [35mInstruction: InitializeAccount3[0m
[2m[onchain][0m [2m3bvJ9h7wmV..[0m [35mInstruction: MintTo[0m
[2m[onchain][0m [2m3bvJ9h7wmV..[0m [35mcreate research progress[0m
[2m[onchain][0m [2m3bvJ9h7wmV..[0m [33mTotal 6,438 / 526,293 CU[0m
[2m[onchain][0m [2m6m3ef3a8rz..[0m [36m⚡ EstateCreated[0m [2mestate=2zEozDGn.. player=8368TZj8.. playerName=Player #1 timestamp=1770018578[0m
[2m[onchain][0m [2m6m3ef3a8rz..[0m [36m⚡ ItemPurchased[0m [2mplayer=8368TZj8.. playerName=Player #1 itemId=9999 quantity=10 price=10000 currency=0 timestamp=1770018578[0m
[2m[onchain][0m [2m6m3ef3a8rz..[0m [35mcreate estate[0m
[2m[onchain][0m [2m6m3ef3a8rz..[0m [35mpurchase item[0m
[2m[onchain][0m [2m6m3ef3a8rz..[0m [33mTotal 12,566 / 396,001 CU[0m
[2m[onchain][0m [2m4zDoPBYG4D..[0m [36m⚡ BuildingStarted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=0 plot=0 completesAt=1770032978 timestamp=1770018578[0m
[2m[onchain][0m [2m4zDoPBYG4D..[0m [36m⚡ BuildingCompleted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=0 level=1 plot=0 timestamp=1770018578[0m
[2m[onchain][0m [2m4zDoPBYG4D..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m4zDoPBYG4D..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m4zDoPBYG4D..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4zDoPBYG4D..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4zDoPBYG4D..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4zDoPBYG4D..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4zDoPBYG4D..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4zDoPBYG4D..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4zDoPBYG4D..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4zDoPBYG4D..[0m [35mcomplete building[0m
[2m[onchain][0m [2m4zDoPBYG4D..[0m [33mTotal 1,072 / 321,543 CU[0m
[buildAndCompleteBuilding] Building 9 needs split build...
[2m[onchain][0m [2m2YiH3PgHgy..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2m2YiH3PgHgy..[0m [36m⚡ BuildingStarted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=9 plot=1 completesAt=1770061780 timestamp=1770018580[0m
[2m[onchain][0m [2m2YiH3PgHgy..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m2YiH3PgHgy..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m2YiH3PgHgy..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2YiH3PgHgy..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2YiH3PgHgy..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2YiH3PgHgy..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2YiH3PgHgy..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2YiH3PgHgy..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2YiH3PgHgy..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2YiH3PgHgy..[0m [35mcomplete building[0m
[2m[onchain][0m [2m2YiH3PgHgy..[0m [33mTotal 564 / 321,525 CU[0m
[2m[onchain][0m [2m2YiH3PgHgy..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1e1c[0m
[2m[onchain][0m [2m3q6UUzYnQs..[0m [36m⚡ BuildingStarted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=9 plot=1 completesAt=1770061780 timestamp=1770018580[0m
[2m[onchain][0m [2m3q6UUzYnQs..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m3q6UUzYnQs..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m3q6UUzYnQs..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3q6UUzYnQs..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3q6UUzYnQs..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3q6UUzYnQs..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3q6UUzYnQs..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3q6UUzYnQs..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3q6UUzYnQs..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3q6UUzYnQs..[0m [33mTotal 10,204 / 331,729 CU[0m
[2m[onchain][0m [2m22QZVERRcV..[0m [36m⚡ BuildingCompleted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=9 level=1 plot=1 timestamp=1770018581[0m
[2m[onchain][0m [2m22QZVERRcV..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m22QZVERRcV..[0m [35mcomplete building[0m
[2m[onchain][0m [2m22QZVERRcV..[0m [33mTotal 1,115 / 289,662 CU[0m
[2m[onchain][0m [2m4CMcDZ5uWu..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2m4CMcDZ5uWu..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m4CMcDZ5uWu..[0m [33mTotal 360 / 399,850 CU[0m
[2m[onchain][0m [2m4CMcDZ5uWu..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1e1a[0m
[buildAndCompleteBuilding] Building 0 already exists, continuing
[buildAndCompleteBuilding] Building 12 needs split build...
[2m[onchain][0m [2m5tXQAPLbsA..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2m5tXQAPLbsA..[0m [36m⚡ BuildingStarted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=12 plot=2 completesAt=1770061792 timestamp=1770018592[0m
[2m[onchain][0m [2m5tXQAPLbsA..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m5tXQAPLbsA..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m5tXQAPLbsA..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5tXQAPLbsA..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5tXQAPLbsA..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5tXQAPLbsA..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5tXQAPLbsA..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5tXQAPLbsA..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5tXQAPLbsA..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5tXQAPLbsA..[0m [35mcomplete building[0m
[2m[onchain][0m [2m5tXQAPLbsA..[0m [33mTotal 591 / 321,488 CU[0m
[2m[onchain][0m [2m5tXQAPLbsA..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1e1c[0m
[2m[onchain][0m [2m5Naa28YdvR..[0m [36m⚡ BuildingStarted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=12 plot=2 completesAt=1770061792 timestamp=1770018592[0m
[2m[onchain][0m [2m5Naa28YdvR..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m5Naa28YdvR..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m5Naa28YdvR..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5Naa28YdvR..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5Naa28YdvR..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5Naa28YdvR..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5Naa28YdvR..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5Naa28YdvR..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5Naa28YdvR..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5Naa28YdvR..[0m [33mTotal 10,209 / 331,697 CU[0m
[2m[onchain][0m [2m4BysUGKN3y..[0m [36m⚡ BuildingCompleted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=12 level=1 plot=2 timestamp=1770018593[0m
[2m[onchain][0m [2m4BysUGKN3y..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4BysUGKN3y..[0m [35mcomplete building[0m
[2m[onchain][0m [2m4BysUGKN3y..[0m [33mTotal 1,179 / 289,657 CU[0m
[2m[onchain][0m [2m4B7vQj7bpG..[0m [36m⚡ BuildingStarted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=1 plot=3 completesAt=1770032995 timestamp=1770018595[0m
[2m[onchain][0m [2m4B7vQj7bpG..[0m [36m⚡ BuildingCompleted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=1 level=1 plot=3 timestamp=1770018595[0m
[2m[onchain][0m [2m4B7vQj7bpG..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m4B7vQj7bpG..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m4B7vQj7bpG..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4B7vQj7bpG..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4B7vQj7bpG..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4B7vQj7bpG..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4B7vQj7bpG..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4B7vQj7bpG..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4B7vQj7bpG..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4B7vQj7bpG..[0m [35mcomplete building[0m
[2m[onchain][0m [2m4B7vQj7bpG..[0m [33mTotal 1,234 / 321,439 CU[0m
[2m[onchain][0m [2m4FUAyy85fM..[0m [36m⚡ TeamCreated[0m [2mteam=2yLuTfkN.. teamName=HTeam597712 founder=8368TZj8.. noviBurned=50000 timestamp=1770018597[0m
[2m[onchain][0m [2m4FUAyy85fM..[0m [35mcreate team[0m
[2m[onchain][0m [2m4FUAyy85fM..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m4FUAyy85fM..[0m [33mTotal 30,208 / 200,000 CU[0m
[32m  ✓ tx [2m4FUAyy85fMKV..[0m[0m
[2m[onchain][0m [2m527Q57xSyf..[0m [36m⚡ UnitsHired[0m [2mplayer=8368TZj8.. playerName=Player #1 unitType=0 baseQuantity=106 finalQuantity=171 noviBurned=500 timeBonusBps=6132 timestamp=1770018597[0m
[2m[onchain][0m [2m527Q57xSyf..[0m [35mhire units[0m
[2m[onchain][0m [2m527Q57xSyf..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m527Q57xSyf..[0m [33mTotal 23,228 / 200,000 CU[0m
[2m[onchain][0m [2m2VNdYG4ZU2..[0m [36m⚡ RallyCreated[0m [2mrally=7Ng2mwEf.. team=2yLuTfkN.. teamName=HTeam597712 leader=8368TZj8.. target=FfQhpjwm.. gatherAt=1770022198 timestamp=1770018598[0m
[2m[onchain][0m [2m2VNdYG4ZU2..[0m [35mcreate rally[0m
[2m[onchain][0m [2m2VNdYG4ZU2..[0m [33mTotal 28,804 / 200,000 CU[0m
[32m  ✓ tx [2m2VNdYG4ZU2A6..[0m[0m
[2m[onchain][0m [2mwWyvkM2QVb..[0m [36m⚡ HeroMinted[0m [2mheroMint=HLta64tC.. heroName=Warrior player=8368TZj8.. playerName=Player #1 templateId=1 rarity=0 timestamp=1770018598[0m
[2m[onchain][0m [2mwWyvkM2QVb..[0m [35mmint hero[0m
[2m[onchain][0m [2mwWyvkM2QVb..[0m [35mInstruction: Create[0m
[2m[onchain][0m [2mwWyvkM2QVb..[0m [35mprograms/mpl-core/src/state/collection.rs:139:Approve[0m
[2m[onchain][0m [2mwWyvkM2QVb..[0m [35mInstruction: AddPlugin[0m
[2m[onchain][0m [2mwWyvkM2QVb..[0m [35mprograms/mpl-core/src/state/collection.rs:160:Approve[0m
[2m[onchain][0m [2mwWyvkM2QVb..[0m [33mTotal 43,368 / 200,000 CU[0m
[32m  ✓ tx [2mwWyvkM2QVbTq..[0m[0m
[2m[onchain][0m [2m4QeFnkLrSJ..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2m4QeFnkLrSJ..[0m [35mlock hero[0m
[2m[onchain][0m [2m4QeFnkLrSJ..[0m [35mInstruction: Transfer[0m
[2m[onchain][0m [2m4QeFnkLrSJ..[0m [35mprograms/mpl-core/src/state/asset.rs:293:Approve[0m
[2m[onchain][0m [2m4QeFnkLrSJ..[0m [35mlock: parsing nft[0m
[2m[onchain][0m [2m4QeFnkLrSJ..[0m [35mlock: nft_data len=309[0m
[2m[onchain][0m [2m4QeFnkLrSJ..[0m [35mlock: parsed ok level=0 tid=0 buffs=0[0m
[2m[onchain][0m [2m4QeFnkLrSJ..[0m [35mlock: loading template[0m
[2m[onchain][0m [2m4QeFnkLrSJ..[0m [35mhero_tid: 0[0m
[2m[onchain][0m [2m4QeFnkLrSJ..[0m [35mtmpl_tid: 1[0m
[2m[onchain][0m [2m4QeFnkLrSJ..[0m [35mlock: template mismatch[0m
[2m[onchain][0m [2m4QeFnkLrSJ..[0m [33mTotal 10,210 / 200,000 CU[0m
[2m[onchain][0m [2m4QeFnkLrSJ..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1777[0m
[31m  ✗ tx[0m
[31m    Transaction 4QeFnkLrSJ2HEAXcFZnZcrXHFtd27sqKcFfMNrfAFqaDL8VwJtzbBUeanfLUtyUF7LbkuEWo8HGSQDm6aYr1Vt7z resulted in an error. [0m
2174 |       default:
2175 |         {
2176 |           message = `Unknown action '${(a => a)(action)}'`;
2177 |         }
2178 |     }
2179 |     super(message);
           ^
error: Transaction 4QeFnkLrSJ2HEAXcFZnZcrXHFtd27sqKcFfMNrfAFqaDL8VwJtzbBUeanfLUtyUF7LbkuEWo8HGSQDm6aYr1Vt7z resulted in an error. 
Status: ({"err":{"InstructionError":[0,{"Custom":6007}]}}). 
Catch the `SendTransactionError` and call `getLogs()` on it for full details.
  signature: "4QeFnkLrSJ2HEAXcFZnZcrXHFtd27sqKcFfMNrfAFqaDL8VwJtzbBUeanfLUtyUF7LbkuEWo8HGSQDm6aYr1Vt7z",
 transactionMessage: "Status: ({\"err\":{\"InstructionError\":[0,{\"Custom\":6007}]}})",
 transactionLogs: undefined,

      at new SendTransactionError (/Users/k/solana/game/vig-internal/sdks/novus-mundus-ts/node_modules/@solana/web3.js/lib/index.cjs.js:2179:5)
      at <anonymous> (/Users/k/solana/game/vig-internal/sdks/novus-mundus-ts/node_modules/@solana/web3.js/lib/index.cjs.js:2302:13)
(fail) Hero System > Hero Lock/Unlock > should lock hero for expedition [22512.80ms]
(skip) Hero System > Hero Lock/Unlock > should unlock hero after expedition
(skip) Hero System > Hero Lock/Unlock > should lock and unlock without expedition
(skip) Hero System > Hero Lock/Unlock > should reject lock on occupied slot
(skip) Hero System > Hero Assignment > should assign hero for defense
(skip) Hero System > Hero Assignment > should remove defensive assignment
(skip) Hero System > Hero Assignment > should reject assigning empty slot
(skip) Hero System > Hero Stats > should have correct base stats from template
(skip) Hero System > Hero Stats > should apply hero bonuses when locked
(skip) Hero System > Hero Stats > should have specialization bonuses
[PlayerFactory] Initializing player 1 (city 1)
[2m[onchain][0m [2m4gKk1crmif..[0m [36m⚡ UserCreated[0m [2muser=5HE6xRps.. wallet=78AzdeTP.. timestamp=1770018600[0m
[2m[onchain][0m [2m4gKk1crmif..[0m [36m⚡ PlayerJoinedKingdom[0m [2mkingdomId=0 gameEngine=A1y9ZYn7.. player=DTpJZyJQ.. owner=78AzdeTP.. joinedAt=1770018600[0m
[2m[onchain][0m [2m4gKk1crmif..[0m [35minit user[0m
[2m[onchain][0m [2m4gKk1crmif..[0m [35mCreateIdempotent[0m
[2m[onchain][0m [2m4gKk1crmif..[0m [35mInstruction: GetAccountDataSize[0m
[2m[onchain][0m [2m4gKk1crmif..[0m [90mProgram return: TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA pQAAAAAAAAA=[0m
[2m[onchain][0m [2m4gKk1crmif..[0m [35mInitialize the associated token account[0m
[2m[onchain][0m [2m4gKk1crmif..[0m [35mInstruction: InitializeImmutableOwner[0m
[2m[onchain][0m [2m4gKk1crmif..[0m [35mPlease upgrade to SPL Token 2022 for immutable owner support[0m
[2m[onchain][0m [2m4gKk1crmif..[0m [35mInstruction: InitializeAccount3[0m
[2m[onchain][0m [2m4gKk1crmif..[0m [35minit player[0m
[2m[onchain][0m [2m4gKk1crmif..[0m [35mCreateIdempotent[0m
[2m[onchain][0m [2m4gKk1crmif..[0m [35mInstruction: GetAccountDataSize[0m
[2m[onchain][0m [2m4gKk1crmif..[0m [90mProgram return: TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA pQAAAAAAAAA=[0m
[2m[onchain][0m [2m4gKk1crmif..[0m [35mInitialize the associated token account[0m
[2m[onchain][0m [2m4gKk1crmif..[0m [35mInstruction: InitializeImmutableOwner[0m
[2m[onchain][0m [2m4gKk1crmif..[0m [35mPlease upgrade to SPL Token 2022 for immutable owner support[0m
[2m[onchain][0m [2m4gKk1crmif..[0m [35mInstruction: InitializeAccount3[0m
[2m[onchain][0m [2m4gKk1crmif..[0m [35mInstruction: MintTo[0m
[2m[onchain][0m [2m4gKk1crmif..[0m [35mcreate research progress[0m
[2m[onchain][0m [2m4gKk1crmif..[0m [33mTotal 4,938 / 514,297 CU[0m
[2m[onchain][0m [2m57mcdaLV13..[0m [36m⚡ EstateCreated[0m [2mestate=CJVxU1P5.. player=DTpJZyJQ.. playerName=Player #2 timestamp=1770018600[0m
[2m[onchain][0m [2m57mcdaLV13..[0m [36m⚡ ItemPurchased[0m [2mplayer=DTpJZyJQ.. playerName=Player #2 itemId=9999 quantity=10 price=10000 currency=0 timestamp=1770018600[0m
[2m[onchain][0m [2m57mcdaLV13..[0m [35mcreate estate[0m
[2m[onchain][0m [2m57mcdaLV13..[0m [35mpurchase item[0m
[2m[onchain][0m [2m57mcdaLV13..[0m [33mTotal 12,566 / 396,001 CU[0m
[2m[onchain][0m [2mAubdJVjX5U..[0m [36m⚡ BuildingStarted[0m [2mplayer=DTpJZyJQ.. playerName=Player #2 buildingType=0 plot=0 completesAt=1770033001 timestamp=1770018601[0m
[2m[onchain][0m [2mAubdJVjX5U..[0m [36m⚡ BuildingCompleted[0m [2mplayer=DTpJZyJQ.. playerName=Player #2 buildingType=0 level=1 plot=0 timestamp=1770018601[0m
[2m[onchain][0m [2mAubdJVjX5U..[0m [35mbuild on estate[0m
[2m[onchain][0m [2mAubdJVjX5U..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2mAubdJVjX5U..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mAubdJVjX5U..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mAubdJVjX5U..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mAubdJVjX5U..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mAubdJVjX5U..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mAubdJVjX5U..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mAubdJVjX5U..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mAubdJVjX5U..[0m [35mcomplete building[0m
[2m[onchain][0m [2mAubdJVjX5U..[0m [33mTotal 1,072 / 321,543 CU[0m
[buildAndCompleteBuilding] Building 9 needs split build...
[2m[onchain][0m [2mGvmGBfLWz4..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2mGvmGBfLWz4..[0m [36m⚡ BuildingStarted[0m [2mplayer=DTpJZyJQ.. playerName=Player #2 buildingType=9 plot=1 completesAt=1770061802 timestamp=1770018602[0m
[2m[onchain][0m [2mGvmGBfLWz4..[0m [35mbuild on estate[0m
[2m[onchain][0m [2mGvmGBfLWz4..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2mGvmGBfLWz4..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mGvmGBfLWz4..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mGvmGBfLWz4..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mGvmGBfLWz4..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mGvmGBfLWz4..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mGvmGBfLWz4..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mGvmGBfLWz4..[0m [35mspeedup estate[0m
[2m[onchain][0m [2mGvmGBfLWz4..[0m [35mcomplete building[0m
[2m[onchain][0m [2mGvmGBfLWz4..[0m [33mTotal 564 / 321,525 CU[0m
[2m[onchain][0m [2mGvmGBfLWz4..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1e1c[0m
[2m[onchain][0m [2m3c88tQLbVX..[0m [36m⚡ BuildingStarted[0m [2mplayer=DTpJZyJQ.. playerName=Player #2 buildingType=9 plot=1 completesAt=1770061803 timestamp=1770018603[0m
[2m[onchain][0m [2m3c88tQLbVX..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m3c88tQLbVX..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m3c88tQLbVX..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3c88tQLbVX..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3c88tQLbVX..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3c88tQLbVX..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3c88tQLbVX..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3c88tQLbVX..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3c88tQLbVX..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3c88tQLbVX..[0m [33mTotal 10,204 / 331,729 CU[0m
[2m[onchain][0m [2m3x4St9Kcew..[0m [36m⚡ BuildingCompleted[0m [2mplayer=DTpJZyJQ.. playerName=Player #2 buildingType=9 level=1 plot=1 timestamp=1770018603[0m
[2m[onchain][0m [2m3x4St9Kcew..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3x4St9Kcew..[0m [35mcomplete building[0m
[2m[onchain][0m [2m3x4St9Kcew..[0m [33mTotal 1,115 / 289,662 CU[0m
[buildAndCompleteBuilding] Building 0 already exists, continuing
[2m[onchain][0m [2m4PAVbYUVTe..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2m4PAVbYUVTe..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m4PAVbYUVTe..[0m [33mTotal 360 / 399,850 CU[0m
[2m[onchain][0m [2m4PAVbYUVTe..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1e1a[0m
[buildAndCompleteBuilding] Building 12 needs split build...
[2m[onchain][0m [2m4Aj9dswMnc..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2m4Aj9dswMnc..[0m [36m⚡ BuildingStarted[0m [2mplayer=DTpJZyJQ.. playerName=Player #2 buildingType=12 plot=2 completesAt=1770061807 timestamp=1770018607[0m
[2m[onchain][0m [2m4Aj9dswMnc..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m4Aj9dswMnc..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m4Aj9dswMnc..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4Aj9dswMnc..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4Aj9dswMnc..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4Aj9dswMnc..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4Aj9dswMnc..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4Aj9dswMnc..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4Aj9dswMnc..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4Aj9dswMnc..[0m [35mcomplete building[0m
[2m[onchain][0m [2m4Aj9dswMnc..[0m [33mTotal 591 / 321,488 CU[0m
[2m[onchain][0m [2m4Aj9dswMnc..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1e1c[0m
[2m[onchain][0m [2m4DdosGXyca..[0m [36m⚡ BuildingStarted[0m [2mplayer=DTpJZyJQ.. playerName=Player #2 buildingType=12 plot=2 completesAt=1770061808 timestamp=1770018608[0m
[2m[onchain][0m [2m4DdosGXyca..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m4DdosGXyca..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m4DdosGXyca..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4DdosGXyca..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4DdosGXyca..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4DdosGXyca..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4DdosGXyca..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4DdosGXyca..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4DdosGXyca..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4DdosGXyca..[0m [33mTotal 10,209 / 331,697 CU[0m
[2m[onchain][0m [2m3JdSSnDSTQ..[0m [36m⚡ BuildingCompleted[0m [2mplayer=DTpJZyJQ.. playerName=Player #2 buildingType=12 level=1 plot=2 timestamp=1770018608[0m
[2m[onchain][0m [2m3JdSSnDSTQ..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3JdSSnDSTQ..[0m [35mcomplete building[0m
[2m[onchain][0m [2m3JdSSnDSTQ..[0m [33mTotal 1,179 / 289,657 CU[0m
[2m[onchain][0m [2m31e2Evjode..[0m [36m⚡ BuildingStarted[0m [2mplayer=DTpJZyJQ.. playerName=Player #2 buildingType=1 plot=3 completesAt=1770033010 timestamp=1770018610[0m
[2m[onchain][0m [2m31e2Evjode..[0m [36m⚡ BuildingCompleted[0m [2mplayer=DTpJZyJQ.. playerName=Player #2 buildingType=1 level=1 plot=3 timestamp=1770018610[0m
[2m[onchain][0m [2m31e2Evjode..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m31e2Evjode..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m31e2Evjode..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m31e2Evjode..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m31e2Evjode..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m31e2Evjode..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m31e2Evjode..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m31e2Evjode..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m31e2Evjode..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m31e2Evjode..[0m [35mcomplete building[0m
[2m[onchain][0m [2m31e2Evjode..[0m [33mTotal 1,234 / 321,439 CU[0m
[32m  ✓ tx [2m29tdUaNtqeNM..[0m[0m
[2m[onchain][0m [2m29tdUaNtqe..[0m [36m⚡ TeamCreated[0m [2mteam=FXdwDp1i.. teamName=HTeam613315 founder=DTpJZyJQ.. noviBurned=50000 timestamp=1770018612[0m
[2m[onchain][0m [2m29tdUaNtqe..[0m [35mcreate team[0m
[2m[onchain][0m [2m29tdUaNtqe..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m29tdUaNtqe..[0m [33mTotal 28,708 / 200,000 CU[0m
[2m[onchain][0m [2m3BW1fvLeFj..[0m [36m⚡ UnitsHired[0m [2mplayer=DTpJZyJQ.. playerName=Player #2 unitType=0 baseQuantity=106 finalQuantity=171 noviBurned=500 timeBonusBps=6132 timestamp=1770018613[0m
[2m[onchain][0m [2m3BW1fvLeFj..[0m [35mhire units[0m
[2m[onchain][0m [2m3BW1fvLeFj..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m3BW1fvLeFj..[0m [33mTotal 23,229 / 200,000 CU[0m
[2m[onchain][0m [2m4XTmKjna4z..[0m [36m⚡ RallyCreated[0m [2mrally=3bRTh3DL.. team=FXdwDp1i.. teamName=HTeam613315 leader=DTpJZyJQ.. target=BnBiDnWC.. gatherAt=1770022213 timestamp=1770018613[0m
[2m[onchain][0m [2m4XTmKjna4z..[0m [35mcreate rally[0m
[2m[onchain][0m [2m4XTmKjna4z..[0m [33mTotal 26,001 / 200,000 CU[0m
[32m  ✓ tx [2m4XTmKjna4zWc..[0m[0m
[32m  ✓ tx [2m2ewzxtUEE5vP..[0m[0m
[2m[onchain][0m [2m2ewzxtUEE5..[0m [36m⚡ HeroMinted[0m [2mheroMint=EWt9gTag.. heroName=Warrior player=DTpJZyJQ.. playerName=Player #2 templateId=1 rarity=0 timestamp=1770018614[0m
[2m[onchain][0m [2m2ewzxtUEE5..[0m [35mmint hero[0m
[2m[onchain][0m [2m2ewzxtUEE5..[0m [35mInstruction: Create[0m
[2m[onchain][0m [2m2ewzxtUEE5..[0m [35mprograms/mpl-core/src/state/collection.rs:139:Approve[0m
[2m[onchain][0m [2m2ewzxtUEE5..[0m [35mInstruction: AddPlugin[0m
[2m[onchain][0m [2m2ewzxtUEE5..[0m [35mprograms/mpl-core/src/state/collection.rs:160:Approve[0m
[2m[onchain][0m [2m2ewzxtUEE5..[0m [33mTotal 43,378 / 200,000 CU[0m
[2m[onchain][0m [2m5xTPwtHBJd..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2m5xTPwtHBJd..[0m [35mlock hero[0m
[2m[onchain][0m [2m5xTPwtHBJd..[0m [35mInstruction: Transfer[0m
[2m[onchain][0m [2m5xTPwtHBJd..[0m [35mprograms/mpl-core/src/state/asset.rs:293:Approve[0m
[2m[onchain][0m [2m5xTPwtHBJd..[0m [35mlock: parsing nft[0m
[2m[onchain][0m [2m5xTPwtHBJd..[0m [35mlock: nft_data len=309[0m
[2m[onchain][0m [2m5xTPwtHBJd..[0m [35mlock: parsed ok level=0 tid=0 buffs=0[0m
[2m[onchain][0m [2m5xTPwtHBJd..[0m [35mlock: loading template[0m
[2m[onchain][0m [2m5xTPwtHBJd..[0m [35mhero_tid: 0[0m
[2m[onchain][0m [2m5xTPwtHBJd..[0m [35mtmpl_tid: 1[0m
[2m[onchain][0m [2m5xTPwtHBJd..[0m [35mlock: template mismatch[0m
[2m[onchain][0m [2m5xTPwtHBJd..[0m [33mTotal 10,210 / 200,000 CU[0m
[2m[onchain][0m [2m5xTPwtHBJd..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1777[0m
[31m  ✗ tx[0m
[31m    Transaction 5xTPwtHBJd4sQ4xGpiwdtXST7kDNZpLJ46TfjhgYuc7vREdfegp7UQbMfLvEDgMwApN3PiELN4K8TdLcgqxsjuvg resulted in an error. [0m
2174 |       default:
2175 |         {
2176 |           message = `Unknown action '${(a => a)(action)}'`;
2177 |         }
2178 |     }
2179 |     super(message);
           ^
error: Transaction 5xTPwtHBJd4sQ4xGpiwdtXST7kDNZpLJ46TfjhgYuc7vREdfegp7UQbMfLvEDgMwApN3PiELN4K8TdLcgqxsjuvg resulted in an error. 
Status: ({"err":{"InstructionError":[0,{"Custom":6007}]}}). 
Catch the `SendTransactionError` and call `getLogs()` on it for full details.
  signature: "5xTPwtHBJd4sQ4xGpiwdtXST7kDNZpLJ46TfjhgYuc7vREdfegp7UQbMfLvEDgMwApN3PiELN4K8TdLcgqxsjuvg",
 transactionMessage: "Status: ({\"err\":{\"InstructionError\":[0,{\"Custom\":6007}]}})",
 transactionLogs: undefined,

      at new SendTransactionError (/Users/k/solana/game/vig-internal/sdks/novus-mundus-ts/node_modules/@solana/web3.js/lib/index.cjs.js:2179:5)
      at <anonymous> (/Users/k/solana/game/vig-internal/sdks/novus-mundus-ts/node_modules/@solana/web3.js/lib/index.cjs.js:2302:13)
(fail) Hero System > Hero Equipment > should lock hero for equipment readiness [15695.58ms]
(skip) Hero System > Hero Equipment > should unlock hero after removing equipment
(skip) Hero System > Hero Equipment > should reject equipping to non-locked hero slot
(skip) Hero System > Hero Collection > should reject duplicate collection creation
(skip) Hero System > Hero Collection > should reject collection creation by non-DAO
(skip) Hero System > Hero Experience > should gain XP from locking hero
(skip) Hero System > Hero Experience > should gain XP from expeditions
(skip) Hero System > Hero Experience > should calculate XP to next level
(skip) Hero System > Hero Rarity > should mint heroes with rarity from template
(skip) Hero System > Hero Rarity > should apply rarity stat multipliers when locked
(skip) Hero System > Hero Trading > should mint hero to wallet
(skip) Hero System > Hero Trading > should reject unlock with wrong slot
(skip) Hero System > Hero Trading > should verify locked hero is owned by PDA

 0 pass
 29 skip
 2 fail
Ran 31 tests across 1 files. [42.92s]
